--- a/_posts/2014-11-11-es6-oredev.md
+++ b/_posts/2014-11-11-es6-oredev.md
@@ -41,6 +41,8 @@ While attending the developer conference <a href="http://oredev.org" target="_bl
 
 ### Watch the video
 
-<iframe src="//player.vimeo.com/video/111289052?portrait=0" width="750" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/111289052">ES6: GETTING READY FOR JAVASCRIPT VNEXT</a> from <a href="http://vimeo.com/user4280938">&Oslash;redev Conference</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<div class='embed-container'><iframe src="//player.vimeo.com/video/111289052?portrait=0" width="750" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+
+[ES6: GETTING READY FOR JAVASCRIPT VNEXT](http://vimeo.com/111289052) from [&Oslash;redev Conference](http://vimeo.com/user4280938) on [Vimeo](https://vimeo.com).
 
 Thanks!
