--- a/_posts/2014-11-11-es6-oredev.md
+++ b/_posts/2014-11-11-es6-oredev.md
@@ -17,7 +17,7 @@ excerpt: >
 
 <img src="/images/2014/es6-oredev/es6-oredev.png" alt="Rockin' the big stage at Øredev" />
 
-While attending the developer conference <a href="http://oredev.org" target="_blank">Øredev</a> last week, I had the pleasure of giving a talk on <a href="http://vimeo.com/111289052" target="_blank">es6</a>.  Many of the new features I covered touch on challenges we've faced building the <a href="/2014/09/20/how-the-azure-portal-works/" target="_blank">Azure Portal</a>.  Instead of covering each new feature one by one (<a href="https://github.com/lukehoban/es6features" target="_blank">Luke Hoban already does a nice job of that</a>) I decided to cover a few high level features that fundamentally affect the way teams build large scale JavaScript applications.
+While attending the developer conference <a href="http://oredev.org" target="_blank" rel="noopener">Øredev</a> last week, I had the pleasure of giving a talk on <a href="http://vimeo.com/111289052" target="_blank" rel="noopener">es6</a>.  Many of the new features I covered touch on challenges we've faced building the <a href="/2014/09/20/how-the-azure-portal-works/" target="_blank" rel="noopener">Azure Portal</a>.  Instead of covering each new feature one by one (<a href="https://github.com/lukehoban/es6features" target="_blank" rel="noopener">Luke Hoban already does a nice job of that</a>) I decided to cover a few high level features that fundamentally affect the way teams build large scale JavaScript applications.
 
 ### Timeline
 
