fix: clean up markup and move to md

--- a/_posts/2010-12-13-recast.md
+++ b/_posts/2010-12-13-recast.md
@@ -9,8 +9,10 @@ tags:
 status: publish
 type: post
 published: true
-excerpt: RECast is a video playback system designed at the Software Engineering Institute of Carnegie Mellon University.  This system focuses on providing students with a with an experience as close as possible to sitting in the actual classroom.  Let's face it - training is a hassle.  On site classes are expensive, require travel, and require everyone to learn at the same time.  RECast aims to fix this problem by providing the same material online with a unique learning experience.  RECast combines an ASP.NET MVC back end with client elements including JQuery and Adobe Flex.
+excerpt: >
+  RECast is a video playback system designed at the Software Engineering Institute of Carnegie Mellon University.  This system focuses on providing students with a with an experience as close as possible to sitting in the actual classroom.  Let's face it - training is a hassle.  On site classes are expensive, require travel, and require everyone to learn at the same time.  RECast aims to fix this problem by providing the same material online with a unique learning experience.  RECast combines an ASP.NET MVC back end with client elements including JQuery and Adobe Flex.
 ---
+
 <img src="/images/2010/12/recast-header.png" title="RECast- video for online education" width="255" height="90" class="alignnone size-full wp-image-303" />
 
 RECast is a video playback system designed at the Software Engineering Institute of Carnegie Mellon University.  This system focuses on providing students with a with an experience as close as possible to sitting in the actual classroom.  Let's face it - training is a hassle.  On site classes are expensive, require travel, and require everyone to learn at the same time.  RECast aims to fix this problem by providing the same material online with a unique learning experience.  RECast combines an ASP.NET MVC back end with client elements including JQuery and Adobe Flex.
