--- a/_posts/2011-04-18-frink.md
+++ b/_posts/2011-04-18-frink.md
@@ -11,7 +11,8 @@ tags:
 status: publish
 type: post
 published: true
-excerpt: Frink! is a mobile client for the web site <a href="http://www.reddit.com" target="_blank">Reddit</a>. It is designed specifically to be used with tablets, taking advantage of gestures in a unique user interface.  Right now the app is available in the BlackBerry App World.
+excerpt: >
+  Frink! is a mobile client for the web site Reddit. It is designed specifically to be used with tablets, taking advantage of gestures in a unique user interface.  Right now the app is available in the BlackBerry App World.
 ---
 
 <img src="/images/2011/04/frink-header1.png" title="FRINK!" />
