fix: more https links

--- a/_posts/2010-12-13-recast.md
+++ b/_posts/2010-12-13-recast.md
@@ -18,7 +18,7 @@ excerpt: >
 RECast is a video playback system designed at the Software Engineering Institute of Carnegie Mellon University.  This system focuses on providing students with a with an experience as close as possible to sitting in the actual classroom.  Let's face it - training is a hassle.  On site classes are expensive, require travel, and require everyone to learn at the same time.  RECast aims to fix this problem by providing the same material online with a unique learning experience.  RECast combines an ASP.NET MVC back end with client elements including JQuery and Adobe Flex.
 
 ### The Student Perspective
-Typically RECast is used with a Learning Management System.  The current release is intended to integrate with the [Virtual Training Environment](http://vte.cert.org/lms/) at Carnegie Mellon University.  When a student enrolls in a course, they will be presented with an outline of material which they need to complete.  Think of this as the course syllabus.  Students can watch lectures, demos, complete virtual labs, take quizzes, or interact with any content that has been released in [SCORM](http://en.wikipedia.org/wiki/Sharable_Content_Object_Reference_Model) format:
+Typically RECast is used with a Learning Management System.  The current release is intended to integrate with the [Virtual Training Environment](https://vte.cert.org/lms/) at Carnegie Mellon University.  When a student enrolls in a course, they will be presented with an outline of material which they need to complete.  Think of this as the course syllabus.  Students can watch lectures, demos, complete virtual labs, take quizzes, or interact with any content that has been released in [SCORM](https://en.wikipedia.org/wiki/Sharable_Content_Object_Reference_Model) format:
 
 ![Section Details](/images/2010/12/lab-section-details1.png)
 
@@ -53,4 +53,4 @@ To make the clips available to students, you need to publish them to an LMS:
 
 ![LMS Publishing Point](/images/2010/12/publishing-point.png)
 
-And that's it!  For more information, visit [RECast](http://vte.cert.org/recast/).
+And that's it!  For more information, visit [RECast](https://vte.cert.org/recast/).
