--- a/_posts/2011-04-18-frink.md
+++ b/_posts/2011-04-18-frink.md
@@ -19,7 +19,7 @@ excerpt: >
 
 Frink! is a mobile client for the web site <a href="http://www.reddit.com" target="_blank">Reddit</a>. It is designed specifically to be used with tablets, taking advantage of gestures in a unique user interface.  Right now the app is available in the BlackBerry App World:
 
-<a href="http://appworld.blackberry.com/webstore/content/38838?lang=en" target="_blank">Frink:  Blackberry app world</a>
+<a href="https://appworld.blackberry.com/webstore/content/38838?lang=en" target="_blank">Frink:  Blackberry app world</a>
 
 After the code has a little time to settle, I plan on releasing the app to the Android Market as well.  The entire project is open source, and available on my <a target="_blank" href="https://github.com/JustinBeckwith/frink">GitHub</a>.
 
@@ -41,18 +41,18 @@ After the code has a little time to settle, I plan on releasing the app to the A
 For more information, here are a bunch of links that talk about the project:
 <ul>
 <li>
-Frink! on the web: <a target="_blank" href="http://frinkapp.com">http://frinkapp.com</a>
+Frink! on the web: <a target="_blank" href="https://frinkapp.com">http://frinkapp.com</a>
 </li>
 <li>
-Frink! on Reddit: <a target="_blank" href="http://www.reddit.com/r/frinkapp">http://www.reddit.com/r/frinkapp</a>
+Frink! on Reddit: <a target="_blank" href="https://www.reddit.com/r/frinkapp">http://www.reddit.com/r/frinkapp</a>
 </li>
 <li>
-Frink! on Twitter: <a target="_blank" href="http://twitter.com/frinkapp">http://twitter.com/frinkapp</a>
+Frink! on Twitter: <a target="_blank" href="https://twitter.com/frinkapp">http://twitter.com/frinkapp</a>
 </li>
 <li>
 Frink! on GitHub: <a target="_blank" href="https://github.com/JustinBeckwith/frink">https://github.com/JustinBeckwith/frink</a>
 </li>
 <li>
-Frink! at BlackBerry App World: <a target="_blank" href="http://appworld.blackberry.com/webstore/content/38838?lang=en">Frink!</a>
+Frink! at BlackBerry App World: <a target="_blank" href="https://appworld.blackberry.com/webstore/content/38838?lang=en">Frink!</a>
 </li>
 </ul>
