--- a/_posts/2011-01-20-google-h264.md
+++ b/_posts/2011-01-20-google-h264.md
@@ -23,9 +23,9 @@ excerpt: >
 
 
 
-<a href="http://jbeckwith.com/2011/01/20/google-h264/h264-header-2/" rel="attachment wp-att-262"><img src="/images/2011/01/h264-header1.png" alt="" title="The Cause and Effect of Google&#039;s H.264 Decision" width="383" height="166"/></a>
+<a href="https://jbeckwith.com/2011/01/20/google-h264/h264-header-2/" rel="attachment wp-att-262"><img src="/images/2011/01/h264-header1.png" alt="" title="The Cause and Effect of Google&#039;s H.264 Decision" width="383" height="166"/></a>
 
-How do the internal workings of a browser that was released only two years ago have an enormous ripple effect on the future of streaming media on the internet?  Last week Google announced on their chromium blog that they're <a href="http://blog.chromium.org/2011/01/html-video-codec-support-in-chrome.html"> dropping support for the h.264 codec</a>, in favor of the open source <a href="http://www.theora.org/">Ogg Theora</a> and <a href="http://blog.webmproject.org/">WebM/VP8</a> codecs.  This is yet another snag in the messy attempt to unify the playback of video in HTML 5, as we now find the #2 and #3 most popular browsers lacking support for what currently is likely the most ubiquitous encoding format.  So how did we get here?
+How do the internal workings of a browser that was released only two years ago have an enormous ripple effect on the future of streaming media on the internet?  Last week Google announced on their chromium blog that they're <a href="https://blog.chromium.org/2011/01/html-video-codec-support-in-chrome.html"> dropping support for the h.264 codec</a>, in favor of the open source <a href="https://www.theora.org/">Ogg Theora</a> and <a href="https://blog.webmproject.org/">WebM/VP8</a> codecs.  This is yet another snag in the messy attempt to unify the playback of video in HTML 5, as we now find the #2 and #3 most popular browsers lacking support for what currently is likely the most ubiquitous encoding format.  So how did we get here?
 
 ### The browser wars are back
 After years of IE 6 and Firefox being the only real browsers around, the browser wars have exploded again.  For the first time since Netscape 4.7 roamed the earth, Internet Explorer has dropped below 50% in the market share.  That leaves a lot of space for the likes of Firefox, Chrome, Safari, and Opera.  Well, maybe not Opera.  The interesting thing in this graph is the dominance of Firefox, and the growth of Chrome.  That leaves ~42% of the current desktop browser market with no H.264 native playback, and ~96% of the next desktop browser market that supports WebM (assuming everyone here upgrades to the latest version of course).
@@ -39,25 +39,25 @@ After years of IE 6 and Firefox being the only real browsers around, the browser
 	}
 </style>
 <div class="chart-container">
-<div id="browser-ww-monthly-200912-201012" style="width:600;height:400"></div><p>Source: <a href="http://gs.statcounter.com/?PHPSESSID=9ni6qaq0p0vdrb4bjtfm6l51i4">StatCounter Global Stats - Browser Market Share</a></p><script type="text/javascript" src="http://www.statcounter.com/js/FusionCharts.js"></script><script type="text/javascript" src="http://gs.statcounter.com/chart.php?browser-ww-monthly-200912-201012"></script>
+<div id="browser-ww-monthly-200912-201012" style="width:600;height:400"></div><p>Source: <a href="https://gs.statcounter.com/?PHPSESSID=9ni6qaq0p0vdrb4bjtfm6l51i4">StatCounter Global Stats - Browser Market Share</a></p><script type="text/javascript" src="https://www.statcounter.com/js/FusionCharts.js"></script><script type="text/javascript" src="https://gs.statcounter.com/chart.php?browser-ww-monthly-200912-201012"></script>
 </div>
 
-What's scary about this is the proliferation of new browsers through mobile and embedded devices.  As time goes on, iOS, Android, and RIM are going to eat more and more of those beautiful hits on our Google Analytics dashboards.  While iOS is currently ahead in terms of volume, <a href="http://blog.nielsen.com/nielsenwire/online_mobile/apple-leads-smartphone-race-while-android-attracts-most-recent-customers/">Android is catching up</a>.  Quickly.
+What's scary about this is the proliferation of new browsers through mobile and embedded devices.  As time goes on, iOS, Android, and RIM are going to eat more and more of those beautiful hits on our Google Analytics dashboards.  While iOS is currently ahead in terms of volume, <a href="https://blog.nielsen.com/nielsenwire/online_mobile/apple-leads-smartphone-race-while-android-attracts-most-recent-customers/">Android is catching up</a>.  Quickly.
 
 <a href="/images/2011/01/smartphone-os-nov2010.png"><img src="/images/2011/01/smartphone-os-nov2010.png" alt="" title="Smartphone Market 2010"></a>
 
 As the homogeneity of the browser market continues to disappear, the likelihood that all browsers will support the same native HTML 5 playback goes down quickly.  So why did Google do this?
 
 ### Is YouTube making money yet?  How about now?  Now?
-In 2006 Google acquired YouTube for $1.65 billion in stock.  The costs of running a video delivery site are sky high, and the sale price certainly turned a lot of heads.  While I've heard a lot of people question the acquisition, there are estimates that YouTube may be <a href="http://mediamemo.allthingsd.com/20100305/another-youtube-revenue-guess-1-billion-in-2011/">generating as much as 1 billion a year in revenue</a> moving forward.  Don't be mistaken, YouTube is a vital piece to controlling advertising in the streaming media market.  They will protect their investment, and continue to grow other revenue streams to support the costs of the platform.  One of the ways I look for Google to do this is through providing a channel to charge for premium or protected content.  MPEG LA makes providing content encoded using H.264 free until 2016 - given the content is available freely to the end user.  The moment you charge for the delivery of that content, you are subject to a delivery fee of 2% revenue per title, up to a maximum $5 million cap.  While I don't think the $5 million is a huge deal to Google, it's an enormous deal for smaller software shops, startups, integrators, and hardware companies that want to stream and decode video from YouTube on their sites or devices.  This model will eventually have a stifling effect on innovation in the streaming media market, which directly affects Google's YouTube line of business.  This pretty easily explains why Google <a href="http://blog.streamingmedia.com/the_business_of_online_vi/2009/08/googles-acquisition-of-on2-not-a-big-deal-heres-why.html">purchased the VP8 codec from On2 for $106.5 million</a>.
+In 2006 Google acquired YouTube for $1.65 billion in stock.  The costs of running a video delivery site are sky high, and the sale price certainly turned a lot of heads.  While I've heard a lot of people question the acquisition, there are estimates that YouTube may be <a href="https://mediamemo.allthingsd.com/20100305/another-youtube-revenue-guess-1-billion-in-2011/">generating as much as 1 billion a year in revenue</a> moving forward.  Don't be mistaken, YouTube is a vital piece to controlling advertising in the streaming media market.  They will protect their investment, and continue to grow other revenue streams to support the costs of the platform.  One of the ways I look for Google to do this is through providing a channel to charge for premium or protected content.  MPEG LA makes providing content encoded using H.264 free until 2016 - given the content is available freely to the end user.  The moment you charge for the delivery of that content, you are subject to a delivery fee of 2% revenue per title, up to a maximum $5 million cap.  While I don't think the $5 million is a huge deal to Google, it's an enormous deal for smaller software shops, startups, integrators, and hardware companies that want to stream and decode video from YouTube on their sites or devices.  This model will eventually have a stifling effect on innovation in the streaming media market, which directly affects Google's YouTube line of business.  This pretty easily explains why Google <a href="https://blog.streamingmedia.com/the_business_of_online_vi/2009/08/googles-acquisition-of-on2-not-a-big-deal-heres-why.html">purchased the VP8 codec from On2 for $106.5 million</a>.
 
-In the short term, this decision isn't going to cause a whole lot of impact.  Even if most browsers did support HTML 5, which they don't, most of the video out there today is in H.264 format.  All of the hardware devices that support decoding are using H.264.  This is a decision that pays dividends 5 years down the road.  Estimates have YouTube receiving as much as <a href="http://www.youtube.com/t/fact_sheet">24 hours of content per minute</a>, which is dizzying to think about.  No matter how you store it, that's a ton of storage space.  More and more of the content being added to the system is in high definition, so that makes the problem even bigger.  Now add the fact that you need to encode your content in two different formats over the long haul, and you have a huge problem.  I want to know - will Google have the stones to yank H.264 support from YouTube all together?
+In the short term, this decision isn't going to cause a whole lot of impact.  Even if most browsers did support HTML 5, which they don't, most of the video out there today is in H.264 format.  All of the hardware devices that support decoding are using H.264.  This is a decision that pays dividends 5 years down the road.  Estimates have YouTube receiving as much as <a href="https://www.youtube.com/t/fact_sheet">24 hours of content per minute</a>, which is dizzying to think about.  No matter how you store it, that's a ton of storage space.  More and more of the content being added to the system is in high definition, so that makes the problem even bigger.  Now add the fact that you need to encode your content in two different formats over the long haul, and you have a huge problem.  I want to know - will Google have the stones to yank H.264 support from YouTube all together?
 
 
 ### Where does this leave everyone?
 As mentioned above, I don't think this changes a lot in the short term.  Here is where I see the big players ending up with the change:
 <ul>
-<li><b>Adobe</b> - Adobe comes out of this situation in great shape.  This pretty much just guarantees that flash isn't going anywhere for a couple of years, and they've already <a href="http://blogs.adobe.com/flashplatform/2010/05/adobe_support_for_vp8.html">announced support for VP8</a>.</li>
+<li><b>Adobe</b> - Adobe comes out of this situation in great shape.  This pretty much just guarantees that flash isn't going anywhere for a couple of years, and they've already <a href="https://blogs.adobe.com/flashplatform/2010/05/adobe_support_for_vp8.html">announced support for VP8</a>.</li>
 <li><b>Microsoft</b> - Microsoft, who doesn't have a horse in this race anymore, has already announced VP8 support for Internet Explorer 9.</li>
 <li><b>Google</b> - Google gets to protect their YouTube and VP8 investments, while promoting innovation through an open standard.</li>
 <li><b>Mozilla</b> - Firefox will remain relevant, given their VP8 support in version 4.  I doubt the Mozilla Foundation had any intentions of paying MPEG LA $5 million.</li>
@@ -69,10 +69,10 @@ Overall, I think Google's decision is a good thing for content developers and in
 
 <ul>
 <li>
-<a href="http://www.zdnet.com/blog/hardware/chromes-love-of-webm-and-hatred-of-h264-has-nothing-to-do-with-youtube/11021">Chrome's love of WebM and hatred of H.264 has nothing to do with YouTube</a>
+<a href="https://www.zdnet.com/blog/hardware/chromes-love-of-webm-and-hatred-of-h264-has-nothing-to-do-with-youtube/11021">Chrome's love of WebM and hatred of H.264 has nothing to do with YouTube</a>
 </li>
 <li>
-<a href="http://arstechnica.com/web/news/2011/01/googles-dropping-h264-from-chrome-a-step-backward-for-openness.ars/">Google's dropping H.264 from Chrome a step backward for openness</a>
+<a href="https://arstechnica.com/web/news/2011/01/googles-dropping-h264-from-chrome-a-step-backward-for-openness.ars/">Google's dropping H.264 from Chrome a step backward for openness</a>
 </li>
 </ul>
 <br />
