format markdown and get markdownlint passing

--- a/_posts/2011-04-18-frink.md
+++ b/_posts/2011-04-18-frink.md
@@ -3,11 +3,11 @@ layout: post
 title: FRINK! - the Reddit client for tablets
 category: projects
 tags:
-- Adobe Flex
-- BlackBerry
-- featured
-- PlayBook
-- Projects
+  - Adobe Flex
+  - BlackBerry
+  - featured
+  - PlayBook
+  - Projects
 status: publish
 type: post
 published: true
@@ -15,44 +15,26 @@ excerpt: >
   Frink! is a mobile client for the web site Reddit. It is designed specifically to be used with tablets, taking advantage of gestures in a unique user interface.  Right now the app is available in the BlackBerry App World.
 ---
 
-<img src="/images/2011/04/frink-header1.png" title="FRINK!" />
+![FRINK!](/images/2011/04/frink-header1.png "FRINK!")
 
-Frink! is a mobile client for the web site <a href="http://www.reddit.com" target="_blank">Reddit</a>. It is designed specifically to be used with tablets, taking advantage of gestures in a unique user interface.  Right now the app is available in the BlackBerry App World:
+Frink! is a mobile client for the web site [Reddit](http://www.reddit.com). It is designed specifically to be used with tablets, taking advantage of gestures in a unique user interface. Right now the app is available in the BlackBerry App World:
 
-<a href="https://appworld.blackberry.com/webstore/content/38838?lang=en" target="_blank">Frink:  Blackberry app world</a>
+[Frink: Blackberry app world](https://appworld.blackberry.com/webstore/content/38838?lang=en)
 
-After the code has a little time to settle, I plan on releasing the app to the Android Market as well.  The entire project is open source, and available on my <a target="_blank" href="https://github.com/JustinBeckwith/frink">GitHub</a>.
+After the code has a little time to settle, I plan on releasing the app to the Android Market as well. The entire project is open source, and available on my [GitHub](https://github.com/JustinBeckwith/frink).
 
-<a href="/images/2011/04/comments.png">
-<img src="/images/2011/04/comments.png" alt="" title="comments on a post" />
-</a>
+![comments on a post](/images/2011/04/comments.png "comments on a post")
 
-<a href="/images/2011/04/post-details.png">
-<img src="/images/2011/04/post-details.png" alt="" title="post details" />
-</a>
+![post details](/images/2011/04/post-details.png "post details")
 
-<a href="/images/2011/04/subreddits.png">
-<img src="/images/2011/04/subreddits.png" alt="" title="subreddits" />
-</a>
+![subreddits](/images/2011/04/subreddits.png "subreddits")
 
-<a href="/images/2011/04/posts.png">
-<img src="/images/2011/04/posts.png" alt="" title="posts" />
-</a>
+![posts](/images/2011/04/posts.png "posts")
+
 For more information, here are a bunch of links that talk about the project:
-<ul>
-<li>
-Frink! on the web: <a target="_blank" href="https://frinkapp.com">http://frinkapp.com</a>
-</li>
-<li>
-Frink! on Reddit: <a target="_blank" href="https://www.reddit.com/r/frinkapp">http://www.reddit.com/r/frinkapp</a>
-</li>
-<li>
-Frink! on Twitter: <a target="_blank" href="https://twitter.com/frinkapp">http://twitter.com/frinkapp</a>
-</li>
-<li>
-Frink! on GitHub: <a target="_blank" href="https://github.com/JustinBeckwith/frink">https://github.com/JustinBeckwith/frink</a>
-</li>
-<li>
-Frink! at BlackBerry App World: <a target="_blank" href="https://appworld.blackberry.com/webstore/content/38838?lang=en">Frink!</a>
-</li>
-</ul>
+
+- Frink! on the web: [http://frinkapp.com](https://frinkapp.com)
+- Frink! on Reddit: [http://www.reddit.com/r/frinkapp](https://www.reddit.com/r/frinkapp)
+- Frink! on Twitter: [http://twitter.com/frinkapp](https://twitter.com/frinkapp)
+- Frink! on GitHub: [https://github.com/JustinBeckwith/frink](https://github.com/JustinBeckwith/frink)
+- Frink! at BlackBerry App World: [Frink!](https://appworld.blackberry.com/webstore/content/38838?lang=en)
