--- a/_posts/2014-11-11-es6-oredev.md
+++ b/_posts/2014-11-11-es6-oredev.md
@@ -2,22 +2,22 @@
 layout: post
 title: es6&#58; Getting ready for the next version of JavaScript
 tags:
-- featured
-- JavaScript
-- oredev
-- TypeScript
+  - featured
+  - JavaScript
+  - oredev
+  - TypeScript
 status: publish
 category: JavaScript
 type: post
 published: true
 featuredImage: "/images/2014/es6-oredev/es6-oredev.png"
 excerpt: >
-    While attending the developer conference <a href="http://oredev.org" target="_blank">Øredev</a> last week, I had the pleasure of giving a talk on <a href="http://vimeo.com/111289052" target="_blank">es6</a>.  Many of the new features I covered touch on challenges we've faced building the <a href="/2014/09/20/how-the-azure-portal-works/" target="_blank">Azure Portal</a>.  Instead of covering each new feature one by one (<a href="https://github.com/lukehoban/es6features" target="_blank">Luke Hoban already does a nice job of that</a>) I decided to cover a few high level features that fundamentally affect the way teams build large scale JavaScript applications.  I also covered the tools you can use today to use these new APIs before browsers catch up.
+  While attending the developer conference <a href="http://oredev.org" target="_blank">Øredev</a> last week, I had the pleasure of giving a talk on <a href="http://vimeo.com/111289052" target="_blank">es6</a>.  Many of the new features I covered touch on challenges we've faced building the <a href="/2014/09/20/how-the-azure-portal-works/" target="_blank">Azure Portal</a>.  Instead of covering each new feature one by one (<a href="https://github.com/lukehoban/es6features" target="_blank">Luke Hoban already does a nice job of that</a>) I decided to cover a few high level features that fundamentally affect the way teams build large scale JavaScript applications.  I also covered the tools you can use today to use these new APIs before browsers catch up.
 ---
 
-<img src="/images/2014/es6-oredev/es6-oredev.png" alt="Rockin' the big stage at Øredev" />
+![Rockin' the big stage at Øredev](/images/2014/es6-oredev/es6-oredev.png)
 
-While attending the developer conference <a href="http://oredev.org" target="_blank" rel="noopener">Øredev</a> last week, I had the pleasure of giving a talk on <a href="http://vimeo.com/111289052" target="_blank" rel="noopener">es6</a>.  Many of the new features I covered touch on challenges we've faced building the <a href="/2014/09/20/how-the-azure-portal-works/" target="_blank" rel="noopener">Azure Portal</a>.  Instead of covering each new feature one by one (<a href="https://github.com/lukehoban/es6features" target="_blank" rel="noopener">Luke Hoban already does a nice job of that</a>) I decided to cover a few high level features that fundamentally affect the way teams build large scale JavaScript applications.
+While attending the developer conference [Øredev](http://oredev.org) last week, I had the pleasure of giving a talk on [es6](http://vimeo.com/111289052). Many of the new features I covered touch on challenges we've faced building the [Azure Portal](/2014/09/20/how-the-azure-portal-works/). Instead of covering each new feature one by one ([Luke Hoban already does a nice job of that](https://github.com/lukehoban/es6features)) I decided to cover a few high level features that fundamentally affect the way teams build large scale JavaScript applications.
 
 ### Timeline
 
@@ -38,9 +38,8 @@ While attending the developer conference <a href="http://oredev.org" target="_bl
 - **37:13** - es7
 - **38:50** - Closing
 
-
 ### Watch the video
-
+<!-- markdownlint-disable-next-line -->
 <div class='embed-container'><iframe title="ES6: GETTING READY FOR JAVASCRIPT VNEXT" src="//player.vimeo.com/video/111289052?portrait=0" width="750" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
 
 [ES6: GETTING READY FOR JAVASCRIPT VNEXT](http://vimeo.com/111289052) from [&Oslash;redev Conference](http://vimeo.com/user4280938) on [Vimeo](https://vimeo.com).
