--- a/src/pages/talks.mdx
+++ b/src/pages/talks.mdx
@@ -1,7 +1,14 @@
 
 # Talks
 
-<iframe width="800" height="450" src="https://www.youtube.com/embed/u0NWV_p7R74?si=BSUy6_gmMXeRZkxu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe 
+  style={{width: '100%', height: '450px'}}
+  src="https://www.youtube.com/embed/u0NWV_p7R74?si=BSUy6_gmMXeRZkxu" 
+  title="YouTube video player" 
+  frameborder="0" 
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+  referrerpolicy="strict-origin-when-cross-origin" 
+  allowfullscreen />
 
 I like public speaking!  If you'd like me to speak at your conference, please [reach out](mailto:justin@justinbeckwith.com).
 
